--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                           My passion for exploring new technologies and problem-solving has led me to continuously enhance my skills and knowledge in these areas. 
                           Through my portfolio, I aim to showcase my expertise and experience in these domains 
                           and demonstrate my ability to deliver exceptional results.. </p>
-                    <a href="Resume.pdf" download>Download CV</a>
+                    <a href="Resume.pdf" download>Download Resume</a>
                 </div>
             </div>
         </div>
