--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>P Rama Ramana Sharma's Portfolo</title>
+    <title>Parnandi Rama Ramana Sharma's Portfolo</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
@@ -36,7 +36,7 @@
         <div class="max-width">
             <div class="home-content">
                 <div class="text-1">Hello, my name is</div>
-                <div class="text-2">P Rama Ramana Sharma</div>
+                <div class="text-2">Parnandi Rama Ramana Sharma</div>
                 <div class="text-3">And I'm a <span class="typing"></span></div>
                  <a href="https://www.linkedin.com/in/p-rama-ramana-sharma-baa2921b8/">Hire me</a>
             </div>
@@ -51,8 +51,7 @@
                 </div>
                 <div class="column right">
                     <div class="text">Hey there myself P Rama Ramana Sharma I'm a <span class="typing-2"></span></div>
-                    <p>from Hyderabad, I am a 3rd year B.Tech student at VIT AP pursuing a course in Computer Science and
-                         Engineering with a specialization in Network and Security. I have a keen interest in various fields of 
+                    <p>grad student at Ohio State University, Columbus, I have a keen interest in various fields of 
                          technology, including Cybersecurity, Backend development, Mobile application development, and iOS development.
                           My passion for exploring new technologies and problem-solving has led me to continuously enhance my skills and knowledge in these areas. 
                           Through my portfolio, I aim to showcase my expertise and experience in these domains 
@@ -153,21 +152,21 @@
                             <i class="fas fa-user"></i>
                             <div class="info">
                                 <div class="head">Name</div>
-                                <div class="sub-title">P Rama Ramana Sharma</div>
+                                <div class="sub-title">Parnandi Rama Ramana Sharma</div>
                             </div>
                         </div>
                         <div class="row">
                             <i class="fas fa-map-marker-alt"></i>
                             <div class="info">
                                 <div class="head">Address</div>
-                                <div class="sub-title">Shamirpet, Hyderabad</div>
+                                <div class="sub-title">Columbus, Ohio</div>
                             </div>
                         </div>
                         <div class="row">
                             <i class="fas fa-envelope"></i>
                             <div class="info">
                                 <div class="head">Email</div>
-                                <div class="sub-title">ramaramana20021212@gmail.com</div>
+                                <div class="sub-title">ramaramana0210@gmail.com</div>
                             </div>
                         </div>
                         <div class="row">
@@ -214,7 +213,7 @@
 
     <!-- footer section start -->
     <footer>
-        <span>Created By <a href="https://www.codingnepalweb.com">P Rama Ramana Sharma</a> | <span class="far fa-copyright"></span> 2020 All rights reserved.</span>
+        <span>Created By <a href="https://www.codingnepalweb.com">Parnandi Rama Ramana Sharma</a> | <span class="far fa-copyright"></span> 2024 All rights reserved.</span>
     </footer>
 
     <script src="script.js"></script>
