--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <img src="ramz.jpg" alt="">
                 </div>
                 <div class="column right">
-                    <div class="text">Hey there myself P Rama Ramana Sharma I'm a <span class="typing-2"></span></div>
+                    <div class="text">Hey there myself Parnandi Rama Ramana Sharma I'm a <span class="typing-2"></span></div>
                     <p>grad student at Ohio State University, Columbus, I have a keen interest in various fields of 
                          technology, including Cybersecurity, Backend development, Mobile application development, and iOS development.
                           My passion for exploring new technologies and problem-solving has led me to continuously enhance my skills and knowledge in these areas. 
