--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 </div>
                 <div class="column right">
                     <div class="text">Hey there myself Parnandi Rama Ramana Sharma I'm a <span class="typing-2"></span></div>
-                    <p>grad student at Ohio State University, Columbus, I have a keen interest in various fields of 
+                    <p>a grad student at Ohio State University, Columbus, I have a keen interest in various fields of 
                          technology, including Cybersecurity, Backend development, Mobile application development, and iOS development.
                           My passion for exploring new technologies and problem-solving has led me to continuously enhance my skills and knowledge in these areas. 
                           Through my portfolio, I aim to showcase my expertise and experience in these domains 
