--- a/index.html
+++ b/index.html
@@ -181,6 +181,12 @@
                             <div class="info">
                                 <div class="head">Linkedin</div>
                                 <div class="sub-title"><a href="https://www.linkedin.com/in/p-rama-ramana-sharma-baa2921b8/">P Rama Ramana Sharma</a></div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <i class="fab fa-tryhackme"></i>
+                            <div class="info">
+                                <div class="head">TryHackme</div>
                                 <iframe src="https://tryhackme.com/api/v2/badges/public-profile?userPublicId=3700325" style='border:none;'></iframe>
                             </div>
                         </div>
