--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
             <div class="contact-content">
                 <div class="column left">
                     <div class="text">Get in Touch</div>
-                    <p>P Rama Ramana Sharma,student at VIT-AP </p>
+                    <p>Parnandi Rama Ramana Sharma</p>
                     <div class="icons">
                         <div class="row">
                             <i class="fas fa-user"></i>
